--- a/src/main/resources/localization/locale_de.properties
+++ b/src/main/resources/localization/locale_de.properties
@@ -1,1 +1,18 @@
-test=немцы   
+navbar.account.account_settings=Kontoeinstellungen
+navbar.account.admin_panel=Administrationsmenü
+navbar.account.deposit=Anzahlung
+navbar.account.my_bets=Meine Wetten
+navbar.account.log_out=Ausloggen
+navbar.account.transaction_history=Verlauf der Transaktionen
+navbar.account.withdrawal=Rückzug
+navbar.link.home=Hauptseite
+navbar.link.news=Nachrichten
+navbar.link.rating=Bewertung
+navbar.link.support=Unterstützung
+navbar.button.register=Registrieren
+navbar.button.log_in=Einloggen
+navbar.login_modal.dont_have_account=Sie haben noch keinen Account?
+navbar.login_modal.header=Einloggen
+navbar.login_modal.button.log_in=Einloggen
+navbar.register_modal.header=Registrieren
+navbar.register_modal.button.register=Registrieren
