--- a/src/main/resources/localization/locale_fr.properties
+++ b/src/main/resources/localization/locale_fr.properties
@@ -1,1 +1,18 @@
-test=франц
+navbar.account.account_settings=Paramètres du compte
+navbar.account.admin_panel=Panneau d'administration
+navbar.account.deposit=Dépôt
+navbar.account.my_bets=Mes paris
+navbar.account.log_out=Se déconnecter
+navbar.account.transaction_history=Historique des transactions
+navbar.account.withdrawal=Retrait
+navbar.link.home=domicile
+navbar.link.news=Nouvelles
+navbar.link.rating=Notation
+navbar.link.support=Soutien
+navbar.button.register=S'inscrire
+navbar.button.log_in=Connexion
+navbar.login_modal.dont_have_account=Vous n'avez pas de compte?
+navbar.login_modal.header=Connexion
+navbar.login_modal.button.log_in=Connexion
+navbar.register_modal.header=S'inscrire
+navbar.register_modal.button.register=S'inscrire
