--- a/src/main/resources/localization/locale_en.properties
+++ b/src/main/resources/localization/locale_en.properties
@@ -1,1 +1,18 @@
-test=англы
+navbar.account.account_settings=Account settings
+navbar.account.admin_panel=Admin panel
+navbar.account.deposit=Deposit
+navbar.account.my_bets=My bets
+navbar.account.log_out=Log out
+navbar.account.transaction_history=Transaction history
+navbar.account.withdrawal=Withdrawal
+navbar.link.home=Home
+navbar.link.news=News
+navbar.link.rating=Rating
+navbar.link.support=Support
+navbar.button.register=Register
+navbar.button.log_in=Log in
+navbar.login_modal.dont_have_account=Don't have an account?
+navbar.login_modal.header=Log in
+navbar.login_modal.button.log_in=Log in
+navbar.register_modal.header=Register
+navbar.register_modal.button.register=Register
