small update of pages and scripts

--- a/src/main/resources/localization/locale.properties
+++ b/src/main/resources/localization/locale.properties
@@ -16,5 +16,8 @@ navbar.login_modal.header=Log in
 navbar.login_modal.button.log_in=Log in
 navbar.register_modal.header=Register
 navbar.register_modal.button.register=Register
+error_page.button.return_to_main_page=Back to main page
+events.tab.current_events=Current events
+events.tab.past_events=Past events
 
 
