--- a/src/main/resources/localization/locale_fr.properties
+++ b/src/main/resources/localization/locale_fr.properties
@@ -16,3 +16,6 @@ navbar.login_modal.header=Connexion
 navbar.login_modal.button.log_in=Connexion
 navbar.register_modal.header=S'inscrire
 navbar.register_modal.button.register=S'inscrire
+error_page.button.return_to_main_page=Revenir à la page d'accueil
+events.tab.current_events=Événements actuels
+events.tab.past_events=Événements passés
