--- a/src/main/resources/localization/locale_ru.properties
+++ b/src/main/resources/localization/locale_ru.properties
@@ -16,3 +16,6 @@ navbar.login_modal.header=Вход
 navbar.login_modal.button.log_in=Войти
 navbar.register_modal.header=Регистрация
 navbar.register_modal.button.register=Зарегистрироваться
+error_page.button.return_to_main_page=Вернуться на главную
+events.tab.current_events=Текущие события
+events.tab.past_events=Прошедшие события
