--- a/src/main/resources/localization/locale_de.properties
+++ b/src/main/resources/localization/locale_de.properties
@@ -16,3 +16,6 @@ navbar.login_modal.header=Einloggen
 navbar.login_modal.button.log_in=Einloggen
 navbar.register_modal.header=Registrieren
 navbar.register_modal.button.register=Registrieren
+error_page.button.return_to_main_page=Kehren Sie zur Homepage zurück
+events.tab.current_events=Aktuelle Events
+events.tab.past_events=Vergangene Ereignisse
