--- a/src/main/resources/localization/locale.properties
+++ b/src/main/resources/localization/locale.properties
@@ -19,5 +19,9 @@ navbar.register_modal.button.register=Register
 error_page.button.return_to_main_page=Back to main page
 events.tab.current_events=Current events
 events.tab.past_events=Past events
+navbar.modal.placeholder.password=Password
+navbar.modal.placeholder.email=Your Email
+navbar.modal.placeholder.repeat_password=Repeat password
+
 
 
