--- a/src/main/resources/localization/locale_de.properties
+++ b/src/main/resources/localization/locale_de.properties
@@ -19,3 +19,6 @@ navbar.register_modal.button.register=Registrieren
 error_page.button.return_to_main_page=Kehren Sie zur Homepage zurück
 events.tab.current_events=Aktuelle Events
 events.tab.past_events=Vergangene Ereignisse
+navbar.modal.placeholder.password=Passwort
+navbar.modal.placeholder.email=Deine E-Mail
+navbar.modal.placeholder.repeat_password=Passwort wiederholen
