--- a/src/main/resources/localization/locale_fr.properties
+++ b/src/main/resources/localization/locale_fr.properties
@@ -19,3 +19,6 @@ navbar.register_modal.button.register=S'inscrire
 error_page.button.return_to_main_page=Revenir à la page d'accueil
 events.tab.current_events=Événements actuels
 events.tab.past_events=Événements passés
+navbar.modal.placeholder.password=Mot de passe
+navbar.modal.placeholder.email=Votre email
+navbar.modal.placeholder.repeat_password=Répéter le mot de passe
