--- a/src/main/resources/localization/locale_ru.properties
+++ b/src/main/resources/localization/locale_ru.properties
@@ -19,3 +19,6 @@ navbar.register_modal.button.register=Зарегистрироваться
 error_page.button.return_to_main_page=Вернуться на главную
 events.tab.current_events=Текущие события
 events.tab.past_events=Прошедшие события
+navbar.modal.placeholder.password=Пароль
+navbar.modal.placeholder.email=Ваш Email
+navbar.modal.placeholder.repeat_password=Повторите пароль
