authorization system alpha

--- a/src/main/resources/localization/locale.properties
+++ b/src/main/resources/localization/locale.properties
@@ -22,6 +22,10 @@ events.tab.past_events=Past events
 navbar.modal.placeholder.password=Password
 navbar.modal.placeholder.email=Your Email
 navbar.modal.placeholder.repeat_password=Repeat password
+navbar.register_modal.invalid_email=incorrect email
+navbar.register_modal.invalid_password_length=Please enter at least 8 characters
+navbar.register_modal.invalid_repeated_password=Password mismatch
+navbar.register_modal.email_already_exist=This Email is already taken
 
 
 
