--- a/src/main/resources/localization/locale_de.properties
+++ b/src/main/resources/localization/locale_de.properties
@@ -1,3 +1,4 @@
+navbar.register_modal.email_already_exist=Diese EMail ist schon vergeben
 navbar.account.account_settings=Kontoeinstellungen
 navbar.account.admin_panel=Administrationsmenü
 navbar.account.deposit=Anzahlung
@@ -22,3 +23,6 @@ events.tab.past_events=Vergangene Ereignisse
 navbar.modal.placeholder.password=Passwort
 navbar.modal.placeholder.email=Deine E-Mail
 navbar.modal.placeholder.repeat_password=Passwort wiederholen
+navbar.register_modal.invalid_email=Falsche Email
+navbar.register_modal.invalid_password_length=Bitte geben Sie mindestens 8 Zeichen ein
+navbar.register_modal.invalid_repeated_password=Die Passwörter stimmen nicht überein
