--- a/src/main/resources/localization/locale_en.properties
+++ b/src/main/resources/localization/locale_en.properties
@@ -1,3 +1,4 @@
+navbar.register_modal.email_already_exist=This Email is already taken
 navbar.account.account_settings=Account settings
 navbar.account.admin_panel=Admin panel
 navbar.account.deposit=Deposit
@@ -22,3 +23,6 @@ events.tab.past_events=Past events
 navbar.modal.placeholder.password=Password
 navbar.modal.placeholder.email=Your Email
 navbar.modal.placeholder.repeat_password=Repeat password
+navbar.register_modal.invalid_email=Incorrect email
+navbar.register_modal.invalid_password_length=Please enter at least 8 characters
+navbar.register_modal.invalid_repeated_password=Password mismatch
