--- a/src/main/resources/localization/locale_ru.properties
+++ b/src/main/resources/localization/locale_ru.properties
@@ -1,3 +1,4 @@
+navbar.register_modal.email_already_exist=Данный Email уже занят
 navbar.account.account_settings=Настройки аккаунта
 navbar.account.admin_panel=Админ панель
 navbar.account.deposit=Пополнение
@@ -22,3 +23,6 @@ events.tab.past_events=Прошедшие события
 navbar.modal.placeholder.password=Пароль
 navbar.modal.placeholder.email=Ваш Email
 navbar.modal.placeholder.repeat_password=Повторите пароль
+navbar.register_modal.invalid_email=Некорректный email
+navbar.register_modal.invalid_password_length=Введите минимум 8 символов
+navbar.register_modal.invalid_repeated_password=Пароли не совпадают
