--- a/src/main/resources/localization/locale_fr.properties
+++ b/src/main/resources/localization/locale_fr.properties
@@ -1,3 +1,4 @@
+navbar.register_modal.email_already_exist=Cet Email est déjà pris
 navbar.account.account_settings=Paramètres du compte
 navbar.account.admin_panel=Panneau d'administration
 navbar.account.deposit=Dépôt
@@ -22,3 +23,6 @@ events.tab.past_events=Événements passés
 navbar.modal.placeholder.password=Mot de passe
 navbar.modal.placeholder.email=Votre email
 navbar.modal.placeholder.repeat_password=Répéter le mot de passe
+navbar.register_modal.invalid_email=Email incorrecte
+navbar.register_modal.invalid_password_length=Veuillez saisir au moins 8 caractères
+navbar.register_modal.invalid_repeated_password=Non concordance des mots de passe
