complete authorization system

--- a/src/main/resources/localization/locale_de.properties
+++ b/src/main/resources/localization/locale_de.properties
@@ -17,7 +17,7 @@ navbar.login_modal.header=Einloggen
 navbar.login_modal.button.log_in=Einloggen
 navbar.register_modal.header=Registrieren
 navbar.register_modal.button.register=Registrieren
-error_page.button.return_to_main_page=Kehren Sie zur Homepage zurück
+page.error404.button.return_to_main_page=Kehren Sie zur Homepage zurück
 events.tab.current_events=Aktuelle Events
 events.tab.past_events=Vergangene Ereignisse
 navbar.modal.placeholder.password=Passwort
@@ -26,3 +26,15 @@ navbar.modal.placeholder.repeat_password=Passwort wiederholen
 navbar.register_modal.invalid_email=Falsche Email
 navbar.register_modal.invalid_password_length=Bitte geben Sie mindestens 8 Zeichen ein
 navbar.register_modal.invalid_repeated_password=Die Passwörter stimmen nicht überein
+navbar.register_modal.wrong_credentials=Falsche Email oder Passwort
+navbar.login_modal.button.register=Registrieren
+page.contacts.header=Kontakte
+page.news.header=Nachrichten
+page.privacy_policy.header=Datenschutz-Bestimmungen
+page.support.header=Technischer Support
+page.team_rating.header=Teamwertung
+page.user.deposit.header=Anzahlung
+page.user.mybets.header=Meine Wetten
+page.user.settings.header=Die Einstellungen
+page.user.transactions.header=Verlauf der Transaktionen
+page.user.withdrawal.header=Rückzug
