--- a/src/main/resources/localization/locale_fr.properties
+++ b/src/main/resources/localization/locale_fr.properties
@@ -17,7 +17,7 @@ navbar.login_modal.header=Connexion
 navbar.login_modal.button.log_in=Connexion
 navbar.register_modal.header=S'inscrire
 navbar.register_modal.button.register=S'inscrire
-error_page.button.return_to_main_page=Revenir à la page d'accueil
+page.error404.button.return_to_main_page=Revenir à la page d'accueil
 events.tab.current_events=Événements actuels
 events.tab.past_events=Événements passés
 navbar.modal.placeholder.password=Mot de passe
@@ -26,3 +26,15 @@ navbar.modal.placeholder.repeat_password=Répéter le mot de passe
 navbar.register_modal.invalid_email=Email incorrecte
 navbar.register_modal.invalid_password_length=Veuillez saisir au moins 8 caractères
 navbar.register_modal.invalid_repeated_password=Non concordance des mots de passe
+navbar.register_modal.wrong_credentials=Mauvais email ou mot de passe
+navbar.login_modal.button.register=S'inscrire
+page.contacts.header=Contacts
+page.news.header=Nouvelles
+page.privacy_policy.header=Politique De Confidentialité
+page.support.header=Soutien Technique
+page.team_rating.header=Évaluation de l'équipe
+page.user.deposit.header=Dépôt
+page.user.mybets.header=Mes paris
+page.user.settings.header=Réglages
+page.user.transactions.header=Historique des transactions
+page.user.withdrawal.header=Retrait
