--- a/src/main/resources/localization/locale_ru.properties
+++ b/src/main/resources/localization/locale_ru.properties
@@ -17,7 +17,7 @@ navbar.login_modal.header=Вход
 navbar.login_modal.button.log_in=Войти
 navbar.register_modal.header=Регистрация
 navbar.register_modal.button.register=Зарегистрироваться
-error_page.button.return_to_main_page=Вернуться на главную
+page.error404.button.return_to_main_page=Вернуться на главную
 events.tab.current_events=Текущие события
 events.tab.past_events=Прошедшие события
 navbar.modal.placeholder.password=Пароль
@@ -26,3 +26,15 @@ navbar.modal.placeholder.repeat_password=Повторите пароль
 navbar.register_modal.invalid_email=Некорректный email
 navbar.register_modal.invalid_password_length=Введите минимум 8 символов
 navbar.register_modal.invalid_repeated_password=Пароли не совпадают
+navbar.register_modal.wrong_credentials=Неправильный email или пароль
+navbar.login_modal.button.register=Зарегистрироваться
+page.contacts.header=Контакты
+page.news.header=Новости
+page.privacy_policy.header=Политика Конфиденциальности
+page.support.header=Техподдержка
+page.team_rating.header=Рейтинг Команд
+page.user.deposit.header=Пополнение счёта
+page.user.mybets.header=Мои Ставки
+page.user.settings.header=Настройки
+page.user.transactions.header=История Транзакций
+page.user.withdrawal.header=Вывод Средств
