--- a/src/main/resources/localization/locale_en.properties
+++ b/src/main/resources/localization/locale_en.properties
@@ -17,7 +17,7 @@ navbar.login_modal.header=Log in
 navbar.login_modal.button.log_in=Log in
 navbar.register_modal.header=Register
 navbar.register_modal.button.register=Register
-error_page.button.return_to_main_page=Back to main page
+page.error404.button.return_to_main_page=Back to main page
 events.tab.current_events=Current events
 events.tab.past_events=Past events
 navbar.modal.placeholder.password=Password
@@ -26,3 +26,15 @@ navbar.modal.placeholder.repeat_password=Repeat password
 navbar.register_modal.invalid_email=Incorrect email
 navbar.register_modal.invalid_password_length=Please enter at least 8 characters
 navbar.register_modal.invalid_repeated_password=Password mismatch
+navbar.register_modal.wrong_credentials=Wrong email or password
+navbar.login_modal.button.register=Register
+page.contacts.header=Contacts
+page.news.header=News
+page.privacy_policy.header=Privacy Policy
+page.support.header=Technical Support
+page.team_rating.header=Team Rating
+page.user.deposit.header=Deposit
+page.user.mybets.header=My Bets
+page.user.settings.header=Settings
+page.user.transactions.header=Transaction History
+page.user.withdrawal.header=Withdrawal
