complete authorization stuff

--- a/src/main/resources/localization/locale_en.properties
+++ b/src/main/resources/localization/locale_en.properties
@@ -35,6 +35,6 @@ page.support.header=Technical Support
 page.team_rating.header=Team Rating
 page.user.deposit.header=Deposit
 page.user.mybets.header=My Bets
-page.user.settings.header=Settings
+page.user.settings.header=Account Settings
 page.user.transactions.header=Transaction History
 page.user.withdrawal.header=Withdrawal
