--- a/src/main/resources/localization/locale_ru.properties
+++ b/src/main/resources/localization/locale_ru.properties
@@ -35,6 +35,6 @@ page.support.header=Техподдержка
 page.team_rating.header=Рейтинг Команд
 page.user.deposit.header=Пополнение счёта
 page.user.mybets.header=Мои Ставки
-page.user.settings.header=Настройки
+page.user.settings.header=Настройки Аккаунта
 page.user.transactions.header=История Транзакций
 page.user.withdrawal.header=Вывод Средств
