add filter access system

--- a/src/main/resources/localization/locale_en.properties
+++ b/src/main/resources/localization/locale_en.properties
@@ -38,3 +38,12 @@ page.user.mybets.header=My Bets
 page.user.settings.header=Account Settings
 page.user.transactions.header=Transaction History
 page.user.withdrawal.header=Withdrawal
+footer.item_text1=CYBERBETS registered at Heelsumstraat 51, E-Commerce Park, Curaçao
+footer.item_text2=and operates under license No. 8048 / JAZ Antillephone.
+footer.item_text3=Paying agent: Karambit OU registered at Harju maakond, Estonia, Tallinn 14512076 Punane tn 56, 13619
+footer.link.resources.news=News
+footer.link.resources.team_rating=Team Rating
+footer.link.support.contacts=Contacts
+footer.link.support.privacy_policy=Privacy Policy
+footer.header.resources=Resources
+footer.header.support=Support
