--- a/src/main/resources/localization/locale_fr.properties
+++ b/src/main/resources/localization/locale_fr.properties
@@ -38,3 +38,13 @@ page.user.mybets.header=Mes paris
 page.user.settings.header=Réglages
 page.user.transactions.header=Historique des transactions
 page.user.withdrawal.header=Retrait
+footer.item_text1=CYBERBETS enregistré à Heelsumstraat 51, E-Commerce Park, Curaçao
+footer.item_text2=et opère sous licence No. 8048 / JAZ Antillephone.
+footer.item_text3=Agent payeur: Karambit OU enregistré à Harju maakond, Estonie, Tallinn 14512076 Punane tn 56, 13619
+footer.link.resources.news=Nouvelles
+footer.link.resources.team_rating=Évaluation de l'équipe
+footer.link.support.contacts=Contacts
+footer.link.support.privacy_policy=Politique de confidentialité
+footer.link.support.technical_support=Soutien Technique
+footer.header.resources=Ressources
+footer.header.support=Soutien
