--- a/src/main/resources/localization/locale_ru.properties
+++ b/src/main/resources/localization/locale_ru.properties
@@ -38,3 +38,12 @@ page.user.mybets.header=Мои Ставки
 page.user.settings.header=Настройки Аккаунта
 page.user.transactions.header=История Транзакций
 page.user.withdrawal.header=Вывод Средств
+footer.item_text1=CYBERBETS зарегистрирована Heelsumstraat 51, E-Commerce Park, Curaçao
+footer.item_text2=и действует по лицензии No. 8048/JAZ Antillephone.
+footer.item_text3=Платежный агент: Karambit OU registered at Harju maakond, Estonia, Tallin 14512076 Punane tn 56, 13619
+footer.link.resources.news=Новости
+footer.link.resources.team_rating=Рейтинг Команд
+footer.link.support.contacts=Контакты
+footer.link.support.privacy_policy=Политика Конфиденциальности
+footer.header.resources=Ресурсы
+footer.header.support=Помощь
