--- a/src/main/resources/localization/locale_de.properties
+++ b/src/main/resources/localization/locale_de.properties
@@ -38,3 +38,12 @@ page.user.mybets.header=Meine Wetten
 page.user.settings.header=Die Einstellungen
 page.user.transactions.header=Verlauf der Transaktionen
 page.user.withdrawal.header=Rückzug
+footer.item_text1=CYBERBETS registriert in der Heelsumstraat 51, E-Commerce Park, Curaçao
+footer.item_text2=und arbeitet unter Lizenz Nr. 8048 / JAZ Antillephone.
+footer.item_text3=Zahlstelle: Karambit OU registriert in Harju Maakond, Estland, Tallinn 14512076 Punane tn 56, 13619
+footer.link.resources.news=Nachrichten
+footer.link.resources.team_rating=Teamwertung
+footer.link.support.contacts=Kontakte
+footer.link.support.privacy_policy=Datenschutz-Bestimmungen
+footer.header.resources=Ressourcen
+footer.header.support=Unterstützung
