begin debelopment of eventResult system

--- a/src/main/resources/localization/locale_de.properties
+++ b/src/main/resources/localization/locale_de.properties
@@ -18,8 +18,8 @@ navbar.login_modal.button.log_in=Einloggen
 navbar.register_modal.header=Registrieren
 navbar.register_modal.button.register=Registrieren
 page.error404.button.return_to_main_page=Kehren Sie zur Homepage zurück
-events.tab.current_events=Aktuelle Events
-events.tab.past_events=Vergangene Ereignisse
+events.container.tab.current_events=Aktuelle events
+events.container.tab.past_events=Vergangene ereignisse
 navbar.modal.placeholder.password=Passwort
 navbar.modal.placeholder.email=Deine E-Mail
 navbar.modal.placeholder.repeat_password=Passwort wiederholen
@@ -47,3 +47,5 @@ footer.link.support.contacts=Kontakte
 footer.link.support.privacy_policy=Datenschutz-Bestimmungen
 footer.header.resources=Ressourcen
 footer.header.support=Unterstützung
+events.container.live_label=Live events
+events.container.upcoming_label=Bevorstehende
