--- a/src/main/resources/localization/locale_ru.properties
+++ b/src/main/resources/localization/locale_ru.properties
@@ -18,8 +18,8 @@ navbar.login_modal.button.log_in=Войти
 navbar.register_modal.header=Регистрация
 navbar.register_modal.button.register=Зарегистрироваться
 page.error404.button.return_to_main_page=Вернуться на главную
-events.tab.current_events=Текущие события
-events.tab.past_events=Прошедшие события
+events.container.tab.current_events=Текущие события
+events.container.tab.past_events=Прошедшие события
 navbar.modal.placeholder.password=Пароль
 navbar.modal.placeholder.email=Ваш Email
 navbar.modal.placeholder.repeat_password=Повторите пароль
@@ -47,3 +47,5 @@ footer.link.support.contacts=Контакты
 footer.link.support.privacy_policy=Политика Конфиденциальности
 footer.header.resources=Ресурсы
 footer.header.support=Помощь
+events.container.live_label=Live события
+events.container.upcoming_label=Предстоящие события
