--- a/src/main/resources/localization/locale.properties
+++ b/src/main/resources/localization/locale.properties
@@ -17,8 +17,8 @@ navbar.login_modal.button.log_in=Log in
 navbar.register_modal.header=Register
 navbar.register_modal.button.register=Register
 page.error404.button.return_to_main_page=Back to main page
-events.tab.current_events=Current events
-events.tab.past_events=Past events
+events.container.tab.current_events=Current events
+events.container.tab.past_events=Past events
 navbar.modal.placeholder.password=Password
 navbar.modal.placeholder.email=Your Email
 navbar.modal.placeholder.repeat_password=Repeat password
@@ -48,6 +48,8 @@ footer.link.support.technical_support=Technical Support
 footer.link.support.contacts=Contacts
 footer.header.resources=Resources
 footer.header.support=Support
+events.container.live_label=Live events
+events.container.upcoming_label=Upcoming
 
 
 
