--- a/src/main/resources/localization/locale_fr.properties
+++ b/src/main/resources/localization/locale_fr.properties
@@ -18,8 +18,8 @@ navbar.login_modal.button.log_in=Connexion
 navbar.register_modal.header=S'inscrire
 navbar.register_modal.button.register=S'inscrire
 page.error404.button.return_to_main_page=Revenir à la page d'accueil
-events.tab.current_events=Événements actuels
-events.tab.past_events=Événements passés
+events.container.tab.current_events=Événements actuels
+events.container.tab.past_events=Événements passés
 navbar.modal.placeholder.password=Mot de passe
 navbar.modal.placeholder.email=Votre email
 navbar.modal.placeholder.repeat_password=Répéter le mot de passe
@@ -48,3 +48,5 @@ footer.link.support.privacy_policy=Politique de confidentialité
 footer.link.support.technical_support=Soutien Technique
 footer.header.resources=Ressources
 footer.header.support=Soutien
+events.container.live_label=Événements en direct
+events.container.upcoming_label=Évènements à venir
