improve and expand actions

--- a/src/main/resources/localization/locale_en.properties
+++ b/src/main/resources/localization/locale_en.properties
@@ -24,7 +24,7 @@ navbar.modal.placeholder.password=Password
 navbar.modal.placeholder.email=Your Email
 navbar.modal.placeholder.repeat_password=Repeat password
 navbar.register_modal.invalid_email=Incorrect email
-navbar.register_modal.invalid_password_length=Please enter at least 8 characters
+navbar.register_modal.invalid_password_length=Please, enter at least 8 characters
 navbar.register_modal.invalid_repeated_password=Password mismatch
 navbar.register_modal.wrong_credentials=Wrong email or password
 navbar.login_modal.button.register=Register
