add bet frontend part, prepare backend

--- a/src/main/resources/localization/locale.properties
+++ b/src/main/resources/localization/locale.properties
@@ -50,6 +50,7 @@ footer.header.resources=Resources
 footer.header.support=Support
 events.container.live_label=Live events
 events.container.upcoming_label=Upcoming
+bet_modal=
 
 
 
