bet module, pre-alpha :D

--- a/src/main/resources/localization/locale_en.properties
+++ b/src/main/resources/localization/locale_en.properties
@@ -49,3 +49,15 @@ footer.header.resources=Resources
 footer.header.support=Support
 events.container.live_label=Live events
 events.container.upcoming_label=Upcoming
+admin_panel.navigation.accounts=Accounts
+admin_panel.navigation.dashboard=Dashboard
+admin_panel.navigation.events=Events
+admin_panel.navigation.leagues=Leagues
+admin_panel.navigation.logs=Logs
+admin_panel.navigation.news=News
+admin_panel.navigation.support=Support
+admin_panel.navigation.teams=Teams
+admin_panel.navigation.transactions=Transactions
+bet_modal.cancel_btn=Cancel
+bet_modal.place_bet_btn=Place bet
+bet_modal.prize_title=Prize
