--- a/src/main/resources/localization/locale_fr.properties
+++ b/src/main/resources/localization/locale_fr.properties
@@ -50,3 +50,15 @@ footer.header.resources=Ressources
 footer.header.support=Soutien
 events.container.live_label=Événements en direct
 events.container.upcoming_label=Évènements à venir
+admin_panel.navigation.accounts=Comptes
+admin_panel.navigation.dashboard=Tableau de bord
+admin_panel.navigation.events=Événements
+admin_panel.navigation.leagues=Ligues
+admin_panel.navigation.logs=Journaux
+admin_panel.navigation.news=Nouvelles
+admin_panel.navigation.support=Soutien technique
+admin_panel.navigation.teams=Les équipes
+admin_panel.navigation.transactions=Transactions
+bet_modal.cancel_btn=Arrière
+bet_modal.place_bet_btn=Parier
+bet_modal.prize_title=Prix
