--- a/src/main/resources/localization/locale_ru.properties
+++ b/src/main/resources/localization/locale_ru.properties
@@ -49,3 +49,15 @@ footer.header.resources=Ресурсы
 footer.header.support=Помощь
 events.container.live_label=Live события
 events.container.upcoming_label=Предстоящие события
+admin_panel.navigation.accounts=Аккаунты
+admin_panel.navigation.dashboard=Статистика
+admin_panel.navigation.events=События
+admin_panel.navigation.leagues=Лиги
+admin_panel.navigation.logs=Логи
+admin_panel.navigation.news=Новости
+admin_panel.navigation.support=Техподдержка
+admin_panel.navigation.teams=Команды
+admin_panel.navigation.transactions=Транзакции
+bet_modal.cancel_btn=Отмена
+bet_modal.place_bet_btn=Поставить
+bet_modal.prize_title=Выигрыш
