--- a/src/main/resources/localization/locale_de.properties
+++ b/src/main/resources/localization/locale_de.properties
@@ -49,3 +49,15 @@ footer.header.resources=Ressourcen
 footer.header.support=Unterstützung
 events.container.live_label=Live events
 events.container.upcoming_label=Bevorstehende
+admin_panel.navigation.accounts=Konten
+admin_panel.navigation.dashboard=Instrumententafel
+admin_panel.navigation.events=Veranstaltungen
+admin_panel.navigation.leagues=Ligen
+admin_panel.navigation.logs=Protokolle
+admin_panel.navigation.news=Nachrichten
+admin_panel.navigation.support=Technischer Support
+admin_panel.navigation.teams=Teams
+admin_panel.navigation.transactions=Transaktionen
+bet_modal.cancel_btn=Zurück
+bet_modal.place_bet_btn=Wetten
+bet_modal.prize_title=Preis-
