small controller remake, update dao architecture, betting stuff almost done

--- a/src/main/resources/localization/locale_fr.properties
+++ b/src/main/resources/localization/locale_fr.properties
@@ -62,3 +62,9 @@ admin_panel.navigation.transactions=Transactions
 bet_modal.cancel_btn=Arrière
 bet_modal.place_bet_btn=Parier
 bet_modal.prize_title=Prix
+bet_modal.event_outcome.total_winner=Gagnant total
+bet_modal.event_outcome.map1_winner=[Carte #1] Victoire sur la carte
+bet_modal.event_outcome.map2_winner=[Carte #2] Victoire sur la carte
+bet_modal.event_outcome.map3_winner=[Carte #3] Victoire sur la carte
+bet_modal.event_outcome.map4_winner=[Carte #4] Victoire sur la carte
+bet_modal.event_outcome.map5_winner=[Carte #5] Victoire sur la carte
