--- a/src/main/resources/localization/locale_ru.properties
+++ b/src/main/resources/localization/locale_ru.properties
@@ -61,3 +61,9 @@ admin_panel.navigation.transactions=Транзакции
 bet_modal.cancel_btn=Отмена
 bet_modal.place_bet_btn=Поставить
 bet_modal.prize_title=Выигрыш
+bet_modal.event_outcome.total_winner=Абсолютный победитель
+bet_modal.event_outcome.map1_winner=[Карта #1] Победа на карте
+bet_modal.event_outcome.map2_winner=[Карта #2] Победа на карте
+bet_modal.event_outcome.map3_winner=[Карта #3] Победа на карте
+bet_modal.event_outcome.map4_winner=[Карта #4] Победа на карте
+bet_modal.event_outcome.map5_winner=[Карта #5] Победа на карте
