--- a/src/main/resources/localization/locale.properties
+++ b/src/main/resources/localization/locale.properties
@@ -62,6 +62,13 @@ admin_panel.navigation.accounts=Accounts
 bet_modal.place_bet_btn=Place bet
 bet_modal.cancel_btn=Cancel
 bet_modal.prize_title=Prize
+bet_modal.event_outcome.total_winner=Total winner
+bet_modal.event_outcome.map1_winner=[Map #1] Victory on the map
+bet_modal.event_outcome.map2_winner=[Map #2] Victory on the map
+bet_modal.event_outcome.map3_winner=[Map #3] Victory on the map
+bet_modal.event_outcome.map4_winner=[Map #4] Victory on the map
+bet_modal.event_outcome.map5_winner=[Map #5] Victory on the map
+bet_modal.status_messages=
 
 
 
