--- a/src/main/resources/localization/locale_de.properties
+++ b/src/main/resources/localization/locale_de.properties
@@ -61,3 +61,9 @@ admin_panel.navigation.transactions=Transaktionen
 bet_modal.cancel_btn=Zurück
 bet_modal.place_bet_btn=Wetten
 bet_modal.prize_title=Preis-
+bet_modal.event_outcome.total_winner=Gesamtsieger
+bet_modal.event_outcome.map1_winner=[Karte #1] Sieg auf der Karte
+bet_modal.event_outcome.map2_winner=[Karte #2] Sieg auf der Karte
+bet_modal.event_outcome.map3_winner=[Karte #3] Sieg auf der Karte
+bet_modal.event_outcome.map4_winner=[Karte #4] Sieg auf der Karte
+bet_modal.event_outcome.map5_winner=[Karte #5] Sieg auf der Karte
