add deposit functionality

--- a/src/main/resources/localization/locale.properties
+++ b/src/main/resources/localization/locale.properties
@@ -68,7 +68,29 @@ bet_modal.event_outcome.map2_winner=[Map #2] Victory on the map
 bet_modal.event_outcome.map3_winner=[Map #3] Victory on the map
 bet_modal.event_outcome.map4_winner=[Map #4] Victory on the map
 bet_modal.event_outcome.map5_winner=[Map #5] Victory on the map
-bet_modal.status_messages=
+transaction_page.container_header.date=Date
+transaction_page.container_header.type=Type
+transaction_page.container_header.amount=Amount
+transaction_page.no_data=No data
+transaction_page.deposit=Deposit
+transaction_page.widthdraw=Withdraw
+deposit_page.pay_with=Pay with
+deposit_page.bank_method=Bank
+deposit_page.card_method=Card
+deposit_page.visaqr_method=Visa QR
+deposit_page.amount=Amount
+deposit_page.bank_name=Bank name
+deposit_page.beneficiary_name=BENEFICIARY NAME
+deposit_page.swift_code=SWIFT CODE
+deposit_page.enter_bank_detaild=Enter bank details to pay
+deposit_page.enter_card_details=Enter your card details to pay
+deposit_page.card_number=Card number
+deposit_page.card_expiry=Card expiry
+deposit_page.scan_qr=Scan the QR code to pay
+deposit_page.pay=Pay
+
+
+
 
 
 
