--- a/src/main/resources/localization/locale_de.properties
+++ b/src/main/resources/localization/locale_de.properties
@@ -67,3 +67,24 @@ bet_modal.event_outcome.map2_winner=[Karte #2] Sieg auf der Karte
 bet_modal.event_outcome.map3_winner=[Karte #3] Sieg auf der Karte
 bet_modal.event_outcome.map4_winner=[Karte #4] Sieg auf der Karte
 bet_modal.event_outcome.map5_winner=[Karte #5] Sieg auf der Karte
+transaction_page.container_header.amount=Summe
+transaction_page.container_header.date=Datum
+transaction_page.container_header.type=Art
+transaction_page.no_data=Keine Daten
+transaction_page.deposit=Anzahlung
+transaction_page.widthdraw=Abheben
+deposit_page.pay_with=Bezahlen mit
+deposit_page.visaqr_method=Visa QR
+deposit_page.card_method=Karte
+deposit_page.bank_method=Bank
+deposit_page.amount=Menge
+deposit_page.enter_bank_detaild=Geben Sie die zu zahlenden Bankdaten ein
+deposit_page.bank_name=Bank name
+deposit_page.beneficiary_name=BEGÜNSTIGTER NAME
+deposit_page.swift_code=SWIFT-CODE
+deposit_page.pay=Zahlen
+deposit_page.enter_card_details=Geben Sie Ihre Kartendaten ein, um zu bezahlen
+deposit_page.card_number=Kartennummer
+deposit_page.card_expiry=Kartenablauf
+deposit_page.scan_qr=Scannen Sie den QR-Code, um zu bezahlen
+
