--- a/src/main/resources/localization/locale_fr.properties
+++ b/src/main/resources/localization/locale_fr.properties
@@ -68,3 +68,24 @@ bet_modal.event_outcome.map2_winner=[Carte #2] Victoire sur la carte
 bet_modal.event_outcome.map3_winner=[Carte #3] Victoire sur la carte
 bet_modal.event_outcome.map4_winner=[Carte #4] Victoire sur la carte
 bet_modal.event_outcome.map5_winner=[Carte #5] Victoire sur la carte
+transaction_page.container_header.amount=Somme
+transaction_page.container_header.date=Date
+transaction_page.container_header.type=Type
+transaction_page.no_data=Pas de données
+transaction_page.deposit=Dépôt
+transaction_page.widthdraw=Retirer
+deposit_page.pay_with=Payer avec
+deposit_page.visaqr_method=Visa QR
+deposit_page.card_method=Carte
+deposit_page.bank_method=Banque
+deposit_page.amount=Montant
+deposit_page.enter_bank_detaild=Entrez les coordonnées bancaires pour payer
+deposit_page.bank_name=Nom de banque
+deposit_page.beneficiary_name=NOM DU BÉNÉFICIAIRE
+deposit_page.swift_code=CODE RAPIDE
+deposit_page.pay=Payer
+deposit_page.enter_card_details=Entrez les détails de votre carte pour payer
+deposit_page.card_number=Numéro de carte
+deposit_page.card_expiry=Expiration de la carte
+deposit_page.scan_qr=Scannez le code QR pour payer
+
