--- a/src/main/resources/localization/locale_ru.properties
+++ b/src/main/resources/localization/locale_ru.properties
@@ -67,3 +67,24 @@ bet_modal.event_outcome.map2_winner=[Карта #2] Победа на карте
 bet_modal.event_outcome.map3_winner=[Карта #3] Победа на карте
 bet_modal.event_outcome.map4_winner=[Карта #4] Победа на карте
 bet_modal.event_outcome.map5_winner=[Карта #5] Победа на карте
+transaction_page.container_header.amount=Сумма
+transaction_page.container_header.date=Дата
+transaction_page.container_header.type=Способ
+transaction_page.no_data=Нет данных
+transaction_page.deposit=Пополнение
+transaction_page.widthdraw=Вывод
+deposit_page.pay_with=Способ оплаты
+deposit_page.visaqr_method=Visa QR
+deposit_page.card_method=Карта
+deposit_page.bank_method=Банк
+deposit_page.amount=Сумма
+deposit_page.enter_bank_detaild=Введите банковские реквизиты для оплаты
+deposit_page.bank_name=Название банка
+deposit_page.beneficiary_name=БЕНЕФИЦИАР
+deposit_page.swift_code=SWIFT КОД
+deposit_page.pay=Оплатить
+deposit_page.enter_card_details=Введите данные своей карты для оплаты
+deposit_page.card_number=Номер карты
+deposit_page.card_expiry=Срок действия
+deposit_page.scan_qr=Отсканируйте QR-код для оплаты
+
