--- a/src/main/resources/localization/locale_fr.properties
+++ b/src/main/resources/localization/locale_fr.properties
@@ -74,18 +74,36 @@ transaction_page.container_header.type=Type
 transaction_page.no_data=Pas de données
 transaction_page.deposit=Dépôt
 transaction_page.widthdraw=Retirer
-deposit_page.pay_with=Payer avec
-deposit_page.visaqr_method=Visa QR
-deposit_page.card_method=Carte
-deposit_page.bank_method=Banque
-deposit_page.amount=Montant
-deposit_page.enter_bank_detaild=Entrez les coordonnées bancaires pour payer
-deposit_page.bank_name=Nom de banque
-deposit_page.beneficiary_name=NOM DU BÉNÉFICIAIRE
-deposit_page.swift_code=CODE RAPIDE
-deposit_page.pay=Payer
-deposit_page.enter_card_details=Entrez les détails de votre carte pour payer
-deposit_page.card_number=Numéro de carte
-deposit_page.card_expiry=Expiration de la carte
-deposit_page.scan_qr=Scannez le code QR pour payer
+transaction.pay_with=Payer avec
+transaction.visaqr_method=Visa QR
+transaction.card_method=Carte
+transaction.bank_method=Banque
+transaction.amount=Montant
+transaction.enter_bank_detaild=Entrez les coordonnées bancaires pour payer
+transaction.bank_name=Nom de banque
+transaction.beneficiary_name=NOM DU BÉNÉFICIAIRE
+transaction.swift_code=CODE RAPIDE
+transaction.pay=Payer
+transaction.enter_card_details=Entrez les détails de votre carte pour payer
+transaction.card_number=Numéro de carte
+transaction.card_expiry=Expiration de la carte
+transaction.scan_qr=Scannez le code QR pour payer
+transaction.check_entered_data=Vérifiez l'exactitude des données saisies
+transaction.incorrect_pay_sum=Montant de paiement incorrect
+transaction.payment_error=Erreur de paiement
+transaction.unavailable=indisponible
+transaction.withdrawal_methods=Méthodes de retrait
+transaction.card_holder=Titulaire de la carte
+transaction.withdraw=Retirer
+settings_page.update_btn=Mettre à jour
+settings_page.repeat_new_password=Répété le nouveau mot de passe
+settings_page.new_password=Nouveau mot de passe
+settings_page.current_password=Mot de passe actuel
+settings_page.select_new_avatar=sélectionnez un nouvel avatar
+settings_page.registration_date=Date d'inscription
+settings_page.invalid_repeated_password=Non concordance des mots de passe
+settings_page.invalid_password_length=Veuillez saisir au moins 8 caractères
+settings_page.update_error=Une erreur s'est produite lors de la tentative de mise à jour de votre compte
+admin_panel.navigation.home=Page d'accueil
+
 
