--- a/src/main/resources/localization/locale_ru.properties
+++ b/src/main/resources/localization/locale_ru.properties
@@ -73,18 +73,35 @@ transaction_page.container_header.type=Способ
 transaction_page.no_data=Нет данных
 transaction_page.deposit=Пополнение
 transaction_page.widthdraw=Вывод
-deposit_page.pay_with=Способ оплаты
-deposit_page.visaqr_method=Visa QR
-deposit_page.card_method=Карта
-deposit_page.bank_method=Банк
-deposit_page.amount=Сумма
-deposit_page.enter_bank_detaild=Введите банковские реквизиты для оплаты
-deposit_page.bank_name=Название банка
-deposit_page.beneficiary_name=БЕНЕФИЦИАР
-deposit_page.swift_code=SWIFT КОД
-deposit_page.pay=Оплатить
-deposit_page.enter_card_details=Введите данные своей карты для оплаты
-deposit_page.card_number=Номер карты
-deposit_page.card_expiry=Срок действия
-deposit_page.scan_qr=Отсканируйте QR-код для оплаты
+transaction.pay_with=Способ оплаты
+transaction.visaqr_method=Visa QR
+transaction.card_method=Карта
+transaction.bank_method=Банк
+transaction.amount=Сумма
+transaction.enter_bank_detaild=Введите банковские реквизиты для оплаты
+transaction.bank_name=Название банка
+transaction.beneficiary_name=БЕНЕФИЦИАР
+transaction.swift_code=SWIFT КОД
+transaction.pay=Оплатить
+transaction.enter_card_details=Введите данные своей карты для оплаты
+transaction.card_number=Номер карты
+transaction.card_expiry=Срок действия
+transaction.scan_qr=Отсканируйте QR-код для оплаты
+transaction.check_entered_data=Проверьте правильность введённых данных
+transaction.incorrect_pay_sum=Некорректная сумма платежа
+transaction.payment_error=Ошибка совершения платежа
+transaction.unavailable=недоступно
+transaction.withdrawal_methods=Способы вывода
+transaction.card_holder=Держатель карты
+transaction.withdraw=Вывести
+settings_page.update_btn=Обновить
+settings_page.repeat_new_password=Повторите новый пароль
+settings_page.new_password=Новый пароль
+settings_page.current_password=Текущий пароль
+settings_page.select_new_avatar=Выберите новый аватар
+settings_page.registration_date=Дата регистрации
+settings_page.invalid_repeated_password=Пароли не совпадают
+settings_page.invalid_password_length=Введите минимум 8 символов
+settings_page.update_error=Произошла ошибка при попытке обновления аккаунта
+admin_panel.navigation.home=Главная
 
