--- a/src/main/resources/localization/locale_de.properties
+++ b/src/main/resources/localization/locale_de.properties
@@ -73,18 +73,35 @@ transaction_page.container_header.type=Art
 transaction_page.no_data=Keine Daten
 transaction_page.deposit=Anzahlung
 transaction_page.widthdraw=Abheben
-deposit_page.pay_with=Bezahlen mit
-deposit_page.visaqr_method=Visa QR
-deposit_page.card_method=Karte
-deposit_page.bank_method=Bank
-deposit_page.amount=Menge
-deposit_page.enter_bank_detaild=Geben Sie die zu zahlenden Bankdaten ein
-deposit_page.bank_name=Bank name
-deposit_page.beneficiary_name=BEGÜNSTIGTER NAME
-deposit_page.swift_code=SWIFT-CODE
-deposit_page.pay=Zahlen
-deposit_page.enter_card_details=Geben Sie Ihre Kartendaten ein, um zu bezahlen
-deposit_page.card_number=Kartennummer
-deposit_page.card_expiry=Kartenablauf
-deposit_page.scan_qr=Scannen Sie den QR-Code, um zu bezahlen
+transaction.pay_with=Bezahlen mit
+transaction.visaqr_method=Visa QR
+transaction.card_method=Karte
+transaction.bank_method=Bank
+transaction.amount=Menge
+transaction.enter_bank_detaild=Geben Sie die zu zahlenden Bankdaten ein
+transaction.bank_name=Bank name
+transaction.beneficiary_name=BEGÜNSTIGTER NAME
+transaction.swift_code=SWIFT-CODE
+transaction.pay=Zahlen
+transaction.enter_card_details=Geben Sie Ihre Kartendaten ein, um zu bezahlen
+transaction.card_number=Kartennummer
+transaction.card_expiry=Kartenablauf
+transaction.scan_qr=Scannen Sie den QR-Code, um zu bezahlen
+transaction.check_entered_data=Überprüfen Sie die Richtigkeit der eingegebenen Daten
+transaction.incorrect_pay_sum=Falscher Zahlungsbetrag
+transaction.payment_error=Zahlungsfehler
+transaction.unavailable=nicht verfügbar
+transaction.withdrawal_methods=Auszahlungsmethoden
+transaction.card_holder=Kartenhalter
+transaction.withdraw=Abheben
+settings_page.update_btn=Aktualisieren
+settings_page.repeat_new_password=Wiederhole das neue Passwort
+settings_page.new_password=Neues Kennwort
+settings_page.current_password=Jetziges Passwort
+settings_page.select_new_avatar=Wähle einen neuen Avatar aus
+settings_page.registration_date=Registrierungsdatum
+settings_page.invalid_repeated_password=Die Passwörter stimmen nicht überein
+settings_page.invalid_password_length=Bitte geben Sie mindestens 8 Zeichen ein
+settings_page.update_error=Beim Versuch, Ihr Konto zu aktualisieren, ist ein Fehler aufgetreten
+admin_panel.navigation.home=Startseite
 
