--- a/src/main/resources/localization/locale_en.properties
+++ b/src/main/resources/localization/locale_en.properties
@@ -73,17 +73,34 @@ transaction_page.container_header.type=Type
 transaction_page.no_data=No data
 transaction_page.deposit=Deposit
 transaction_page.widthdraw=Withdraw
-deposit_page.pay_with=Pay with
-deposit_page.visaqr_method=Visa QR
-deposit_page.card_method=Card
-deposit_page.bank_method=Bank
-deposit_page.amount=Amount
-deposit_page.enter_bank_detaild=Enter bank details to pay
-deposit_page.bank_name=Bank name
-deposit_page.beneficiary_name=BENEFICIARY NAME
-deposit_page.swift_code=SWIFT CODE
-deposit_page.pay=Pay
-deposit_page.enter_card_details=Enter your card details to pay
-deposit_page.card_number=Card number
-deposit_page.card_expiry=Card expiry
-deposit_page.scan_qr=Scan the QR code to pay
+transaction.pay_with=Pay with
+transaction.visaqr_method=Visa QR
+transaction.card_method=Card
+transaction.bank_method=Bank
+transaction.amount=Amount
+transaction.enter_bank_detaild=Enter bank details to pay
+transaction.bank_name=Bank name
+transaction.beneficiary_name=BENEFICIARY NAME
+transaction.swift_code=SWIFT CODE
+transaction.pay=Pay
+transaction.enter_card_details=Enter your card details to pay
+transaction.card_number=Card number
+transaction.card_expiry=Card expiry
+transaction.scan_qr=Scan the QR code to pay
+transaction.check_entered_data=Check the correctness of the entered data
+transaction.incorrect_pay_sum=Incorrect payment amount
+transaction.payment_error=Payment error
+transaction.unavailable=unavailable
+transaction.withdrawal_methods=Withdrawal methods
+transaction.card_holder=Card holder
+transaction.withdraw=Withdraw
+settings_page.update_btn=Update
+settings_page.repeat_new_password=Repeat new password
+settings_page.new_password=New password
+settings_page.current_password=Current password
+settings_page.select_new_avatar=Select new avatar
+settings_page.registration_date=Registration date
+settings_page.invalid_repeated_password=Password mismatch
+settings_page.invalid_password_length=Please, enter at least 8 characters
+settings_page.update_error=An error occurred while trying to update your account
+admin_panel.navigation.home=Home
