improve user modules, make admin dashboard, clean code

--- a/src/main/resources/localization/locale_de.properties
+++ b/src/main/resources/localization/locale_de.properties
@@ -70,7 +70,7 @@ bet_modal.event_outcome.map5_winner=[Karte #5] Sieg auf der Karte
 transaction_page.container_header.amount=Summe
 transaction_page.container_header.date=Datum
 transaction_page.container_header.type=Art
-transaction_page.no_data=Keine Daten
+label.no_data=Keine Daten
 transaction_page.deposit=Anzahlung
 transaction_page.widthdraw=Abheben
 transaction.pay_with=Bezahlen mit
@@ -104,4 +104,10 @@ settings_page.invalid_repeated_password=Die Passwörter stimmen nicht überein
 settings_page.invalid_password_length=Bitte geben Sie mindestens 8 Zeichen ein
 settings_page.update_error=Beim Versuch, Ihr Konto zu aktualisieren, ist ein Fehler aufgetreten
 admin_panel.navigation.home=Startseite
+dashboard_page.accounts_number=Gesamtzahl der Konten
+dashboard_page.month_registrations=Anmeldungen pro Monat
+dashboard_page.month_deposits=Einzahlungen in diesem Monat
+dashboard_page.month_profit=Monatliches Einkommen
+dashboard_page.active_events_number=Aktive Ereignisse
+dashboard_page.active_events_bets_amount=Anzahl der Wetten auf aktive Ereignisse
 
