--- a/src/main/resources/localization/locale_en.properties
+++ b/src/main/resources/localization/locale_en.properties
@@ -70,7 +70,7 @@ bet_modal.event_outcome.map5_winner=[Map #5] Victory on the map
 transaction_page.container_header.amount=Amount
 transaction_page.container_header.date=Date
 transaction_page.container_header.type=Type
-transaction_page.no_data=No data
+label.no_data=No data
 transaction_page.deposit=Deposit
 transaction_page.widthdraw=Withdraw
 transaction.pay_with=Pay with
@@ -104,3 +104,9 @@ settings_page.invalid_repeated_password=Password mismatch
 settings_page.invalid_password_length=Please, enter at least 8 characters
 settings_page.update_error=An error occurred while trying to update your account
 admin_panel.navigation.home=Home
+dashboard_page.accounts_number=Total number of accounts
+dashboard_page.month_registrations=Registrations this month
+dashboard_page.month_deposits=Deposits this month
+dashboard_page.month_profit=Income for this month
+dashboard_page.active_events_number=Active events
+dashboard_page.active_events_bets_amount=Amount of bets on active events
