--- a/src/main/resources/localization/locale_fr.properties
+++ b/src/main/resources/localization/locale_fr.properties
@@ -71,7 +71,7 @@ bet_modal.event_outcome.map5_winner=[Carte #5] Victoire sur la carte
 transaction_page.container_header.amount=Somme
 transaction_page.container_header.date=Date
 transaction_page.container_header.type=Type
-transaction_page.no_data=Pas de données
+label.no_data=Pas de données
 transaction_page.deposit=Dépôt
 transaction_page.widthdraw=Retirer
 transaction.pay_with=Payer avec
@@ -99,11 +99,17 @@ settings_page.update_btn=Mettre à jour
 settings_page.repeat_new_password=Répété le nouveau mot de passe
 settings_page.new_password=Nouveau mot de passe
 settings_page.current_password=Mot de passe actuel
-settings_page.select_new_avatar=sélectionnez un nouvel avatar
+settings_page.select_new_avatar=Sélectionnez un nouvel avatar
 settings_page.registration_date=Date d'inscription
 settings_page.invalid_repeated_password=Non concordance des mots de passe
 settings_page.invalid_password_length=Veuillez saisir au moins 8 caractères
 settings_page.update_error=Une erreur s'est produite lors de la tentative de mise à jour de votre compte
 admin_panel.navigation.home=Page d'accueil
+dashboard_page.accounts_number=Nombre total de comptes
+dashboard_page.month_registrations=Inscriptions par mois
+dashboard_page.month_deposits=Dépôts ce mois-ci
+dashboard_page.month_profit=Revenu mensuel
+dashboard_page.active_events_number=Événements actifs
+dashboard_page.active_events_bets_amount=Montant des paris sur les événements actifs
 
 
