--- a/src/main/resources/localization/locale_ru.properties
+++ b/src/main/resources/localization/locale_ru.properties
@@ -70,7 +70,7 @@ bet_modal.event_outcome.map5_winner=[Карта #5] Победа на карте
 transaction_page.container_header.amount=Сумма
 transaction_page.container_header.date=Дата
 transaction_page.container_header.type=Способ
-transaction_page.no_data=Нет данных
+label.no_data=Нет данных
 transaction_page.deposit=Пополнение
 transaction_page.widthdraw=Вывод
 transaction.pay_with=Способ оплаты
@@ -104,4 +104,10 @@ settings_page.invalid_repeated_password=Пароли не совпадают
 settings_page.invalid_password_length=Введите минимум 8 символов
 settings_page.update_error=Произошла ошибка при попытке обновления аккаунта
 admin_panel.navigation.home=Главная
+dashboard_page.accounts_number=Общее число пользователей
+dashboard_page.month_registrations=Регистраций за месяц
+dashboard_page.month_deposits=Депозитов за месяц
+dashboard_page.month_profit=Месячный доход
+dashboard_page.active_events_number=Активные события
+dashboard_page.active_events_bets_amount=Сумма ставок на активные события
 
